--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
-        "barryvdh/laravel-dompdf": "0.6.*"
+        "barryvdh/laravel-dompdf": "0.6.*",
+        "maatwebsite/excel": "~2.0"
+
     },
     "autoload": {
         "classmap": [
